<resources>
    <string name="app_name">Written</string>
    <string name="facebook_app_id">877838499708984</string>
    <string name="fb_login_protocol_scheme">fb877838499708984</string>
    <string name="menu_write_text">글쓰기</string>
    <string name="menu_title_text">글감</string>
    <string name="menu_my_text">나의 글</string>
    <string name="menu_subscribe_text">구독</string>
    <string name="menu_saved_text">보관함</string>
    <string name="write_new_edit_text">당신의 생각을 들려주세요.</string>
    <string name="copy_snackbar_text">글이 클립보드에 복사되었습니다.</string>
    <string name="close_text">닫기</string>
    <string name="completed_text">완료</string>
    <string name="close_dialog_title">작성 중인 글이 소멸됩니다.</string>
    <string name="close_dialog_continue">계속 쓰기</string>
    <string name="close_dialog_leave">나가기</string>
    <string name="incomplete_snackbar_text">내용을 입력해주세요.</string>
    <string name="delete_dialog_title">정말로 삭제 하시겠습니까?</string>
    <string name="delete_dialog_delete">삭제하기</string>
    <string name="delete_dialog_cancel">취소</string>
    <string name="all_titles_text">전체 기간 중 최근에 등록된 모든 글감</string>
    <string name="logout_dialog_title">정말로 로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_cancel">취소</string>
    <string name="logout_dialog_logout">로그아웃</string>
</resources>