<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:background="@color/background">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_dialog_title"
        android:fontFamily="@font/nanum_myeongjo_bold"
        android:textSize="19dp" />
    <TextView
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_dialog_delete"
        android:fontFamily="@font/nanum_myeongjo"
        android:textSize="17dp"/>
    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/delete_dialog_cancel"
        android:fontFamily="@font/nanum_myeongjo"
        android:textSize="17dp"/>
</LinearLayout>